完成架构及视觉优化
